# vst3One

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: kanban-style.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
